--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>GitHub Pages 17</title>
 </head>
 <body>
-<h1>GitHub Pages 17..</h1>
+<h1>GitHub Pages 17</h1>
+<p>今年のGitはよいGit。</p>
 </body>
 </html>
