--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 ﻿<html>
 <head>
 <title>GitHub Pages 17</title>
+<script src="Lib/Prime17.js"></script>
+<script src="A/Syn_001.js"></script>
+<script src="A/Pane_001.js"></script>
 </head>
 <body>
 <h1>GitHub Pages 17</h1>
 <p>今年のGitはよいGit。</p>
+<div id= "App1"></div>
+<script>
+
+new function()
+{
+	Pane_001.Create( $.Id( "App1" ) );
+	
+}
+
+</script>
 </body>
 </html>
