--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <body>
 <h1>GitHub Pages 17</h1>
 <p>今年のGitはよいGit。</p>
+
+<h2>Hashdoc</h2>
+<p>
+<a href="./A/Tx1.html">Text 1</a>
+</p>
+
 <div id= "App1"></div>
 <script>
 
