--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h2>Hashdoc</h2>
 <p>
-<a href="./A/Tx1.html">Text 1</a>
+<a href="./HD/index.html#%5B91%2C%22%E3%81%82%E3%81%8B%E3%81%95%E3%81%9F%E3%81%AA%22%2C%22%22%5D">あかさたな - Hashdoc</a>
 </p>
 
 <div id= "App1"></div>
