--- a/HD/index.html
+++ b/HD/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
 <title>Text 1 -- HashDoc</title>
-<meta name="viewport"  content="device-width" />
+<meta name="viewport"  content="width=320" />
 <style>
 textarea, button
 {
