--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <h2>Hashdoc</h2>
 <p>
-<a href="./HD/#%5B91%2C%22%E3%81%82%E3%81%8B%E3%81%95%E3%81%9F%E3%81%AA%22%2C%22%22%5D">あかさたな - Hashdoc</a>
-<a href="./HD/index.html#%5B91%2C%22%E3%81%82%E3%81%8B%E3%81%95%E3%81%9F%E3%81%AA%22%2C%22%22%5D">(local)</a>
+<a href="./hashdoc/#%5B91%2C%22%E3%81%82%E3%81%8B%E3%81%95%E3%81%9F%E3%81%AA%22%2C%22%22%5D">あかさたな - Hashdoc</a>
+<a href="./hashdoc/index.html#%5B91%2C%22%E3%81%82%E3%81%8B%E3%81%95%E3%81%9F%E3%81%AA%22%2C%22%22%5D">(local)</a>
 </p>
 
 <div id= "App1"></div>
