--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 <h2>Hashdoc</h2>
 <p>
-<a href="./hashdoc/#%5B91%2C%22%E3%81%82%E3%81%8B%E3%81%95%E3%81%9F%E3%81%AA%22%2C%22%22%5D">あかさたな - Hashdoc</a>
-<a href="./hashdoc/index.html#%5B91%2C%22%E3%81%82%E3%81%8B%E3%81%95%E3%81%9F%E3%81%AA%22%2C%22%22%5D">(local)</a>
+<a href="./hashdoc/#WzkxLCLjga3jgZPjgr/jgrMiLCIiLCIiXQ==">Hashdoc</a><br/>
+
+Local:<br/>
+<a href="./hashdoc/index.html#WzkxLCLjga3jgZPjgr/jgrMiLCIiLCIiXQ==">hashdoc</a>
+<a href="./hashdoc/Enc Q1.html" >Enc Q1</a>
 </p>
 
 <div id= "App1"></div>
