--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <h2>Hashdoc</h2>
 <p>
-<a href="./hashdoc/#WzkxLCLjga3jgZPjgr/jgrMiLCIiLCIiXQ==">Hashdoc</a><br/>
+<a href="./hash-note/">hash-note</a><br/>
 
 Local:<br/>
-<a href="./hashdoc/index.html#WzkxLCLjga3jgZPjgr/jgrMiLCIiLCIiXQ==">hashdoc</a>
-<a href="./hashdoc/Enc Q1.html" >Enc Q1</a>
+<a href="./hash-note/index.html">hash-note</a>
+<a href="./hash-note/Enc Q1.html" >Enc Q1</a>
 </p>
 
 <div id= "App1"></div>
