--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <h1>GitHub Pages 17</h1>
-<p>今年のGitはよいGit。</p>
+<p>2018/02/21 更新</p>
 
-<h2>Hashdoc</h2>
+<h2>Hash Note</h2>
 <p>
 <a href="./hash-note/">hash-note</a><br/>
 
